--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 body {
     background-color: black;
     color: violet;
-    font-size: 30px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-size: 50px;
+    font-family: 'Share Tech', sans-serif;
     text-align: center;
 }
 
