--- a/game.css
+++ b/game.css
@@ -4,12 +4,6 @@
 
 }
 
-:root {
-  --hue-neutral: 200;
-  --hue-wrong: 0;
-  --hue-correct: 145;
-}
-
 body {
   padding: 0;
   margin: 0;
@@ -28,7 +22,7 @@ body {
   border-radius: 5px;
   padding: 10px;
   box-shadow: 0 0 10px 2px;
-  font-size: 20;
+  font-size: 20px;
   z-index: 1;
   opacity: .8;
 }
@@ -42,7 +36,7 @@ body {
     align-items: center;
     flex-wrap: nowrap;
     z-index: 2;
-    font-size: 20;
+    font-size: 20px;
 }
 
 
@@ -53,6 +47,7 @@ body {
   margin: 20px 0;
 }
 
+/* Used https://www.w3schools.com/css/css3_buttons.asp for help with styling buttons */
 .btn {
   background-color: purple;
   border-radius: 5px;
@@ -92,21 +87,31 @@ body {
   display: none;
 }
 
-#videoBG {
-    position: fixed;
-    z-index: -1;
-}
-
+/* Used http://thenewcode.com/500/Use-YouTube-Videos-as-Fullscreen-Web-Page-Backgrounds for help with video back ground */
 @media (min-aspect-ratio: 16/9) {
-    #videoBG {
-        width: 100%;
-        height:auto;
-    }
+    .foreground { height: 300%; top: -100%; }
+}
+@media (max-aspect-ratio: 16/9) {
+    .foreground { width: 300%; left: -100%; }
 }
 
-@media (max-aspect-ratio: 16/9) {
-    #videoBG {
-        width: auto;
-        height:100%;
-    }
+
+.video-container {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: -99;
+}
+
+.foreground,
+.video-container iframe {
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    pointer-events: none;
+}
+#vidtop-content {
+    top: 0;
 }
