--- a/game.css
+++ b/game.css
@@ -45,6 +45,17 @@ body {
     font-size: 20;
 }
 
+.topcorner{
+    position:absolute;
+    top:10px;
+    right: 10px;
+ }
+
+ .leftcorner{
+    position:absolute;
+    top:10px;
+    left: 10px;
+ }
 
 .btn-grid {
   display: grid;
@@ -92,6 +103,7 @@ body {
   display: none;
 }
 
+/* Used https://www.youtube.com/watch?v=emL9dkijfZY for help with video background */
 #videoBG {
     position: fixed;
     z-index: -1;
@@ -109,4 +121,14 @@ body {
         width: auto;
         height:100%;
     }
+}
+
+@media (max-width: 767px) {
+  #videoBG {
+        display: none;
+  }
+  body {
+    background: url('poster.png');
+    background-size: cover;
+  }
 }
