--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,17 @@ body {
     font-size: 40px;
     font-family: 'Share Tech', sans-serif;
     text-align: center;
+    margin: auto;
+    padding: 45px;
 }
 
 .play-btn {
     color: purple;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
 }
